<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> TPVICS-SHRC Linelisting </string>
    <string name="hh02"> کلسٹر کوڈ  </string>
    <string name="hh03"> اسٹرکچر نمبر </string>
    <string name="hh04"> تعمیراتی ساخت </string>
    <string name="hh04a"> رہائشی </string>
    <string name="hh04b"> دکان/مارکیٹ/پلازا </string>
    <string name="hh04c"> مسجد/چرچ/مندر </string>
    <string name="hh04d"> اسکول/کالج/یونیورسٹی </string>
    <string name="hh04e"> مرکز صحت </string>
    <string name="hh04f">  زیر تعمیر </string>
    <string name="hh0496"> دیگر </string>
    <string name="hh04h"> عارظی  طور پر لسٹنگ بند کریں  </string>
    <string name="hh04i"> مزید عمارت نہیں (کلسٹر مکمل ہوگیا) </string>
    <string name="confirmcity"> کیا آپ اُوپر دیئے گئے شہر/گاوُں میں موجود ہیں؟ </string>
    <string name="hh05"> کیا اس عمارت میں ایک سے زیادہ خاندان رہائش پزیر ہیں؟ </string>
    <string name="hh06"> خاندان کی تعداد؟ </string>
    <string name="hh07"> خاندان نمبر </string>
    <string name="hh08"> خاندان کے سربراہ کا نام </string>
    <string name="hh09"> موبائل نمبر </string>
    <string name="hh10a"> تعداد </string>
    <string name="hh10"> کیا اس گھر میں 5 سال سے کم عمر کے بچے ہیں؟ </string>
    <string name="hh12"> کیا اس گھر میں 12 سے 23 مہینے کی عمر کے بچے ہیں؟ </string>
    <string name="hh16"> افراد کی تعداد </string>
    <string name="hh17"> کیا اس گھر میں مذید کوئی خاندان رہائش پزیر ہے </string>
    <string name="hh14"> کیا یہ جگہ رہائشی مقاصد کے لئے استعمال کی جا رہی ہے؟ </string>
    <string name="na101a"> ضلعہ </string>
    <string name="na101b">  تحصیل / تعلُقہ </string>
    <string name="na101c"> یونین کونسل </string>
    <string name="na101d"> گاوُں/ محلہ </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="delete"> Delete this HH </string>
    <string name="lstWarning">کیا یہ پہلا ٹیب ہے جو اس کلسٹر میں استعمال ہوتا ہے؟</string>
    <string name="name"> نام </string>
    <string name="num"> نمبر </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>

    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me"> MY DEVICE NAME </string>
    <string name="label_peers">NEAR-BY DEVICES</string>
    <string name="empty">" "</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="enable_p2p_button">Enable Wifi</string>
    <string name="discover_peers_button">Find Near-By Devices</string>
    <string name="country_prompt">Choose a country</string>
    <string name="txtName"> qwertyuiop asdfghjkl zxcvbnm QWERTYUIOP ASDFGHJKL ZXCVBNM </string>
    <string name="add_household">Add Household</string>
    <string name="goto_next_structure">Goto Next Structure</string>
    <string name="change_enumeration_block">Change Enumeration Block</string>
    <string name="logout">Logout</string>
    <string name="add_new_family">Add New Family</string>
    <string name="add_next_family">Add Next Family</string>
    <string name="cluster_number">Cluster number</string>
    <string name="check">CHECK</string>
    <string name="start_line_listing">Start Line Listing</string>
    <string name="sync_listing">Sync Listing</string>
    <string name="open_db_manager">Open DB Manager</string>
    <string name="copy_data_to_sdcard">Copy Data to SDCard</string>
    <string name="records_summary">Records Summary</string>
    <string name="new_version_of_this_app_is_available_for_download">New version of this app is available for download.</string>
    <string name="check_cluster_map">Check Cluster Map</string>
    <string name="a_project_of">A PROJECT OF</string>
    <string name="aga_khan_logo">Aga Khan LOGO</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>

</resources>