<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tpvics_hhlisting_app.activities.ui.SetupActivity" />

    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:layoutDirection="rtl"
        android:scrollbarSize="10dip"
        android:textDirection="rtl"
        tools:context=".activities.ui.SetupActivity">

        <LinearLayout style="@style/vlinearlayout">

            <LinearLayout
                android:id="@+id/fldGrpSecA01"
                style="@style/vlinearlayout">


                <androidx.cardview.widget.CardView
                    android:id="@+id/hh02cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh02" />

                        <TextView
                            android:id="@+id/hh02"
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@color/pink_100"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/hh03cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh03" />

                        <TextView
                            android:id="@+id/hh03"
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@color/pink_100"
                            android:gravity="center"
                            android:text="@string/hh03"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/hh04cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh04" />

                        <RadioGroup
                            android:id="@+id/hh04"
                            style="@style/vradiogroup">

                            <RadioButton
                                android:id="@+id/hh04a"
                                style="@style/radiobutton"
                                android:text="@string/hh04a" />

                            <RadioButton
                                android:id="@+id/hh04b"
                                style="@style/radiobutton"
                                android:text="@string/hh04b" />

                            <RadioButton
                                android:id="@+id/hh04c"
                                style="@style/radiobutton"
                                android:text="@string/hh04c" />

                            <RadioButton
                                android:id="@+id/hh04d"
                                style="@style/radiobutton"
                                android:text="@string/hh04d" />

                            <RadioButton
                                android:id="@+id/hh04e"
                                style="@style/radiobutton"
                                android:text="@string/hh04e" />

                            <RadioButton
                                android:id="@+id/hh04f"
                                style="@style/radiobutton"
                                android:text="@string/hh04f" />

                            <RadioButton
                                android:id="@+id/hh0496"
                                style="@style/radiobutton"
                                android:text="@string/hh0496" />

                            <RadioButton
                                android:id="@+id/hh04h"
                                style="@style/radiobutton"
                                android:text="@string/hh04h" />

                            <RadioButton
                                android:id="@+id/hh04i"
                                style="@style/radiobutton"
                                android:text="@string/hh04i" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/fldGrpHH12"
                    style="@style/vlinearlayout"
                    android:visibility="gone"
                    tools:visibility="visible">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/hh14cv"
                        style="@style/cardView">

                        <LinearLayout style="@style/vlinearlayout">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/hh14" />

                            <RadioGroup
                                android:id="@+id/hh14"
                                style="@style/hradiogroup">

                                <RadioButton
                                    android:id="@+id/hh14a"
                                    style="@style/radiobutton"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/yes" />

                                <RadioButton
                                    android:id="@+id/hh14b"
                                    style="@style/radiobutton"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/no" />

                            </RadioGroup>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:id="@+id/fldGrpHH04"
                        style="@style/vlinearlayout"
                        android:visibility="gone"
                        tools:visibility="visible">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/hh0506cv"
                            style="@style/cardView">

                            <LinearLayout style="@style/vlinearlayout">

                                <!--Are there more than one Families?-->
                                <TextView
                                    style="@style/i_textview"
                                    android:text="@string/hh05" />

                                <LinearLayout style="@style/hlinearlayout">

                                    <Switch
                                        android:id="@+id/hh05"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1" />

                                    <!--How many Families?-->
                                    <com.edittextpicker.aliazaz.EditTextPicker
                                        android:id="@+id/hh06"
                                        style="@style/EditTextNum"
                                        android:layout_width="0dp"
                                        android:layout_weight="1"
                                        android:enabled="false"
                                        android:hint="@string/hh06"
                                        android:maxLength="2"
                                        app:maxValue="99"
                                        app:minValue="1"
                                        app:type="range" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:id="@+id/hh07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/hh07"
                            android:typeface="serif"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btnAddHH"
                            style="@style/button"
                            android:onClick="@{() -> callback.onBtnAddHHClick()}"
                            android:text="@string/add_household"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnNextStructure"
                style="@style/button"
                android:onClick="@{() -> callback.onBtnNextStructureClick()}"
                android:text="@string/goto_next_structure"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnChangePSU"
                style="@style/button"
                android:onClick="@{() -> callback.onBtnChangePSUClick()}"
                android:text="@string/change_enumeration_block"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>


    </ScrollView>
</layout>
