<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.aku.hassannaqvi.tpvics_hhlisting_app.activities.home.MainActivity">

    <LinearLayout style="@style/vlinearlayout">

        <TextView
            android:id="@+id/lblAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightOrange"
            android:textAlignment="center"
            android:textColor="@color/darkRed"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msgText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/records_summary"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/msgUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center_horizontal"
            android:text="@string/new_version_of_this_app_is_available_for_download"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:visibility="gone" />


        <androidx.cardview.widget.CardView
            android:id="@+id/checkPSUcv"
            style="@style/cardView">

            <LinearLayout
                style="@style/hlinearlayout"
                android:padding="20dp">

                <EditText
                    android:id="@+id/txtPSU"
                    style="@style/EditTextNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:hint="@string/cluster_number"
                    android:maxLength="6" />

                <ImageButton
                    android:id="@+id/btnCheckPSU"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/circle_search" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/fldGrpna101"
            style="@style/vlinearlayout"
            android:visibility="gone"
            tools:visibility="visible">

            <!-- Province -->
            <androidx.cardview.widget.CardView
                android:id="@+id/na101acv"
                style="@style/cardView">

                <LinearLayout style="@style/hlinearlayout">

                    <!--hh03-->
                    <TextView
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/na101a" />


                    <TextView
                        android:id="@+id/na101a"
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/na101a"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- District  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/na101bcv"
                style="@style/cardView">

                <LinearLayout style="@style/hlinearlayout">

                    <!--hh04-->
                    <TextView
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/na101b" />


                    <TextView
                        android:id="@+id/na101b"
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/na101b"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- Tehsil  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/na101ccv"
                style="@style/cardView">

                <LinearLayout style="@style/hlinearlayout">

                    <!--hh05-->
                    <TextView
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/na101c" />


                    <TextView
                        android:id="@+id/na101c"
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/na101c"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- Place   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/na101dcv"
                style="@style/cardView">

                <LinearLayout style="@style/hlinearlayout">

                    <!--hh06-->
                    <TextView
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/na101d" />


                    <TextView
                        android:id="@+id/na101d"
                        style="@style/i_textview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/na101d"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/openClusterMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="openClusterMap"
                android:text="@string/check_cluster_map"
                android:textColor="#7139c2"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chkconfirm"
                style="@style/checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layoutDirection="rtl"
                android:text="@string/confirmcity" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lllstwarning"
            style="@style/vlinearlayout"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                style="@style/cardView"
                android:layoutDirection="rtl">

                <LinearLayout
                    android:id="@+id/fldGrpMain01"
                    style="@style/linearlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/lstWarning" />

                    <RadioGroup
                        android:id="@+id/lstwarning"
                        style="@style/hradiogroup">

                        <RadioButton
                            android:id="@+id/lstwarninga"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/lstwarningb"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/openForm"
                style="@style/button"
                android:onClick="openForm"
                android:text="@string/start_line_listing" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/districtN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ef3030"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ucN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ef3030"
                android:visibility="gone" />

            <TextView
                android:id="@+id/psuN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ef3030"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/syncFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="syncFunction"
            android:text="@string/sync_listing"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/adminBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/openDBManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="openDB"
                android:text="@string/open_db_manager" />


            <Button
                android:id="@+id/copyData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="copyData"
                android:text="@string/copy_data_to_sdcard" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>